fixes line spacing and paragraphs in footer

--- a/css/main.scss
+++ b/css/main.scss
@@ -366,6 +366,8 @@ header {
 #locale h4,
 #locale p {
   color: white;
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .footer {
@@ -374,6 +376,7 @@ header {
 
 .social-media {
   font-size: 1.5rem;
+  text-align: left;
 }
 
 .light-title {
